--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
    <body>
       <div class="container">
          <div class="load">
-            <div class="load__spinner"></div>
              <p class="load__lettre--1 load__lettre">o</p>
              <p class="load__lettre--2 load__lettre">h</p>
              <p class="load__lettre--3 load__lettre">m</p>
@@ -43,21 +42,21 @@
             <h2>Fonctionnement</h2>
             <ol class="fonctionnement">
                <a href="#">
-                  <li li>
+                  <li class="ordre ordre--1">
                      <p class="liste">1</p>
                      <i class="fas fa-mobile-alt"></i>
                      <p>Choisissez un restaurant</p>
                   </li>
                </a>
                <a href="#">
-                  <li>
+                  <li class="ordre ordre--2">
                      <p class="liste">2</p>
                      <i class="fas fa-list-ul"></i>
                      <p>Composez votre menu</p>
                   </li>
                </a>
                <a href="#">
-                  <li>
+                  <li class="ordre ordre--3">
                      <p class="liste">3</p>
                      <i class="fas fa-store"></i>
                      <p>Dégustez au restaurant</p>
